<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Currency Converter</string>
    <string name="action_settings">Settings</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="convert">Convert</string>
    <string name="youhave">You have</string>
    <string name="youllhave">You\'ll have</string>
    <string name="about">About</string>
    <string name="more">More</string>

    <string name="no_inet">No internet connection available</string>

</resources>
